--- a/index.html
+++ b/index.html
@@ -5,6 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section_theme">
+      <nav>
+        <ul>
+          <li>
+            <a>главная</a>
+          </li>
+          <li>
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li>
+            <a href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a>
+        <img
+          class="logo content-section_theme"
+          src="/images/logo-black.svg"
+          alt="Логотип Оно тебе надо">
+      </a>
+      <address>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
+      </address>
+    </header>
+    <main>
+      <section class="cover content-section_theme">
+        <h1><span>оно</span> <span>тебе</span> <span>надо</span></h1>
+        <div class="description">
+          <p>Аукцион вещей, вкоторые никто не верил</p>
+          <button>Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2>Лоты</h2>
+        <ul>
+          <li>
+            <a href="#">Фильм режиссёра, который бросил киношколу</a>
+            <article>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+          </li>
+          <li>
+            <a></a>
+            <article></article>
+          </li>
+          <li>
+            <a></a>
+            <article></article>
+          </li>
+        </ul>
+        <a></a>
+      </section>
+      <section class="about">
+        <div></div>
+        <div>
+          <h2></h2>
+          <p></p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer content-section_theme">
+      <address></address>
+      <nav></nav>
+      <ul></ul>
+    </footer>
+  </body>
 </html>
