--- a/index.html
+++ b/index.html
@@ -5,12 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header class="header content-section_theme">
+      <nav class="header-menu">
+        <ul class="header-menu-list">
+          <li class="header-menu-list-item header-menu-list-item-no-bullit">
+            <a class="header-menu-link header-menu-link-active">главная</a>
+          </li>
+          <li class="header-menu-list-item">
+            <a class="header-menu-link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header-menu-list-item">
+            <a class="header-menu-link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header-logo">
+        <img
+          class="header-logo-image content-section_theme"
+          src="images/logo-black.svg"
+          alt="Логотип Оно тебе надо">
+      </a>
+      <address class="address header-address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br>
+        наб. Принсенграхт 263-<br>265, Амстердам
+      </address>
+    </header>
+    <main>
+      <section class="cover content-section_theme">
+        <div class="overlay"></div>
+        <h1 class="cover-title"><span class="accent-span">оно</span> <span class="accent-span text-center"> тебе</span> <span class="accent-span text-right"> надо</span></h1>
+        <div class="description">
+          <p>Аукцион вещей, вкоторые никто не верил</p>
+          <button>Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots content-section_theme">
+        <h2>Лоты</h2>
+        <ul>
+          <li>
+            <a href="#">Фильм режиссёра, который бросил киношколу</a>
+            <article>Не просто бросил, а ушёл с первой лекции.
+              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+          </li>
+          <li>
+            <a href="#">Книга, где описан один скучный день из жизни рекламного агента</a>
+            <article>Объёмом почти в тысячу страниц.
+              Иногда без знаков препинания и с переходами на древнеанглийский.
+              В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
+              И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
+          </li>
+          <li>
+            <a href="#">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+            <article>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+              Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+              что это — одна из революционных работ Кандинского?</article>
+          </li>
+        </ul>
+        <a href="#">посмотреть больше</a>
+      </section>
+      <section class="about content-section_theme">
+        <div class="about-logo">
+          <img src="images/logo-white.svg">
+        </div>
+        <div>
+          <h2>Об аукционе</h2>
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион.
+            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
+            Кому нужны все эти странные вещи, созданные любителями?</p>
+
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
+            В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность,
+            сейчас без этих лотов невозможно представить современную культуру.
+            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer content-section_theme">
+      <address>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
+      </address>
       <nav>
         <ul>
           <li>
@@ -24,56 +109,23 @@
           </li>
         </ul>
       </nav>
-      <a>
-        <img
-          class="logo content-section_theme"
-          src="/images/logo-black.svg"
-          alt="Логотип Оно тебе надо">
-      </a>
-      <address>
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
-      </address>
-    </header>
-    <main>
-      <section class="cover content-section_theme">
-        <h1><span>оно</span> <span>тебе</span> <span>надо</span></h1>
-        <div class="description">
-          <p>Аукцион вещей, вкоторые никто не верил</p>
-          <button>Сделать ставку</button>
-        </div>
-      </section>
-      <section class="lots">
-        <h2>Лоты</h2>
-        <ul>
-          <li>
-            <a href="#">Фильм режиссёра, который бросил киношколу</a>
-            <article>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
-          </li>
-          <li>
-            <a></a>
-            <article></article>
-          </li>
-          <li>
-            <a></a>
-            <article></article>
-          </li>
-        </ul>
-        <a></a>
-      </section>
-      <section class="about">
-        <div></div>
-        <div>
-          <h2></h2>
-          <p></p>
-        </div>
-      </section>
-    </main>
-    <footer class="footer content-section_theme">
-      <address></address>
-      <nav></nav>
-      <ul></ul>
+      <ul>
+        <li>
+          <a>
+            <img src="images/yt.svg">
+          </a>
+        </li>
+        <li>
+          <a>
+            <img src="images/vk.svg">
+          </a>
+        </li>
+        <li>
+          <a>
+            <img src="images/pinterest.svg">
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
