--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <main>
       <section class="cover content-section_theme">
         <div class="overlay"></div>
-        <h1 class="cover-title"><span class="accent-span">оно</span> <span class="accent-span text-center"> тебе</span> <span class="accent-span text-right"> надо</span></h1>
+        <h1 class="cover-title">
+          <span class="accent-span">оно</span>
+          <span class="accent-span text-center">теб<span class="last-letter">е</span></span>
+          <span class="accent-span text-right">над<span class="last-letter">о</span></h1>
         <div class="description">
           <p>Аукцион вещей, вкоторые никто не верил</p>
           <button>Сделать ставку</button>
