сделана детальная стилизация header и cover

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <a class="header-logo">
         <img
-          class="header-logo-image content-section_theme"
+          class="header-logo-image"
           src="images/logo-black.svg"
           alt="Логотип Оно тебе надо">
       </a>
@@ -44,28 +44,29 @@
         <h1 class="cover-title">
           <span class="accent-span">оно</span>
           <span class="accent-span text-center">теб<span class="last-letter">е</span></span>
-          <span class="accent-span text-right">над<span class="last-letter">о</span></h1>
-        <div class="description">
-          <p>Аукцион вещей, вкоторые никто не верил</p>
-          <button>Сделать ставку</button>
+          <span class="accent-span text-right">над<span class="last-letter">о</span>
+        </h1>
+        <div class="cover-description">
+          <p class="cover-description-text common-space">Аукцион<span class="space-ninety"> </span>вещей, в<span class="space-onehundred-ten"> </span>которые никто<span class="space-ninety"> </span>не верил</p>
+          <button class="cover-description-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots content-section_theme">
-        <h2>Лоты</h2>
-        <ul>
-          <li>
+        <h2 class="lots-header section-header">Лоты</h2>
+        <ul class="lots-card-list">
+          <li class="lots-card-list-item">
             <a href="#">Фильм режиссёра, который бросил киношколу</a>
             <article>Не просто бросил, а ушёл с первой лекции.
               Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
           </li>
-          <li>
+          <li class="lots-card-list-item">
             <a href="#">Книга, где описан один скучный день из жизни рекламного агента</a>
             <article>Объёмом почти в тысячу страниц.
               Иногда без знаков препинания и с переходами на древнеанглийский.
               В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
               И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
           </li>
-          <li>
+          <li class="lots-card-list-item">
             <a href="#">Картина, которую повторит даже 5-летний сын маминой подруги</a>
             <article>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
               Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
@@ -79,7 +80,7 @@
           <img src="images/logo-white.svg">
         </div>
         <div>
-          <h2>Об аукционе</h2>
+          <h2 class="about-header section-header">Об аукционе</h2>
           <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
             Наши лоты вообще не должны были попасть ни на один аукцион.
             Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
