сделана детальная стилизация lots

--- a/index.html
+++ b/index.html
@@ -55,25 +55,45 @@
         <h2 class="lots-header section-header">Лоты</h2>
         <ul class="lots-card-list">
           <li class="lots-card-list-item">
-            <a href="#">Фильм режиссёра, который бросил киношколу</a>
-            <article>Не просто бросил, а ушёл с первой лекции.
-              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+            <a class="card-link" href="#">
+              <article class="card card-type-film">
+                <div class="overlay"></div>
+                <h3 class="card-title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card-text">
+                  Не просто бросил, а ушёл с первой лекции.
+                  Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
           </li>
           <li class="lots-card-list-item">
-            <a href="#">Книга, где описан один скучный день из жизни рекламного агента</a>
-            <article>Объёмом почти в тысячу страниц.
-              Иногда без знаков препинания и с переходами на древнеанглийский.
-              В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-              И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
+            <a class="card-link" href="#">
+              <article class="card card-type-book">
+                <div class="overlay"></div>
+                <h3 class="card-title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card-text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский.
+                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
+                  И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
           </li>
           <li class="lots-card-list-item">
-            <a href="#">Картина, которую повторит даже 5-летний сын маминой подруги</a>
-            <article>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-              Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
-              что это — одна из революционных работ Кандинского?</article>
+            <a class="card-link" href="#">
+              <article class="card card-type-picture">
+                <div class="overlay"></div>
+                <h3 class="card-title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card-text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                  Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
           </li>
         </ul>
-        <a href="#">посмотреть больше</a>
+        <a class="lots-look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about content-section_theme">
         <div class="about-logo">
