--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         </div>
         <div>
           <h2 class="about-header section-header">Об аукционе</h2>
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+          <p class="about-text first-paragraph">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
             Наши лоты вообще не должны были попасть ни на один аукцион.
             Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
             Кому нужны все эти странные вещи, созданные любителями?</p>
 
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
+          <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
             В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность,
             сейчас без этих лотов невозможно представить современную культуру.
@@ -115,38 +115,40 @@
       </section>
     </main>
     <footer class="footer content-section_theme">
-      <address>
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
+        <br>
+        наб. Принсенграхт 263-265,<br> Амстердам
       </address>
-      <nav>
-        <ul>
-          <li>
-            <a>главная</a>
+      <nav class="footer-menu">
+        <ul class="footer-menu-list">
+          <li class="footer-menu-list-item">
+            <a class="footer-menu-link footer-menu-link-active">главная</a>
           </li>
-          <li>
-            <a href="#">посмотреть лоты</a>
+          <li class="footer-menu-list-item">
+            <a class="footer-menu-link" href="#">посмотреть лоты</a>
           </li>
-          <li>
-            <a href="#">об аукционе</a>
+          <li class="footer-menu-list-item">
+            <a class="footer-menu-link" href="#">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a>
-            <img src="images/yt.svg">
+      <ul class="footer-social-list">
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#">
+            <img class="footer-social-icon" src="images/yt.svg">
           </a>
         </li>
-        <li>
-          <a>
-            <img src="images/vk.svg">
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#">
+            <img class="footer-social-icon" src="images/vk.svg">
           </a>
         </li>
-        <li>
-          <a>
-            <img src="images/pinterest.svg">
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#">
+            <img class="footer-social-icon" src="images/pinterest.svg">
           </a>
         </li>
       </ul>
