--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="cover-title">
           <span class="accent-span">оно</span>
           <span class="accent-span text-center">теб<span class="last-letter">е</span></span>
-          <span class="accent-span text-right">над<span class="last-letter">о</span>
+          <span class="accent-span text-right">над<span class="last-letter">о</span></span>
         </h1>
         <div class="cover-description">
           <p class="cover-description-text common-space">Аукцион<span class="space-ninety"> </span>вещей, в<span class="space-onehundred-ten"> </span>которые никто<span class="space-ninety"> </span>не верил</p>
@@ -97,7 +97,7 @@
       </section>
       <section class="about content-section_theme">
         <div class="about-logo">
-          <img src="images/logo-white.svg">
+          <img src="images/logo-white.svg" alt="Логотип Оно тебе надо">
         </div>
         <div>
           <h2 class="about-header section-header">Об аукционе</h2>
@@ -138,17 +138,17 @@
       <ul class="footer-social-list">
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/yt.svg">
+            <img class="footer-social-icon" src="images/yt.svg" alt="Логотип YouTube">
           </a>
         </li>
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/vk.svg">
+            <img class="footer-social-icon" src="images/vk.svg" alt="Логотип ВКонтакте">
           </a>
         </li>
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/pinterest.svg">
+            <img class="footer-social-icon" src="images/pinterest.svg" alt="Логотип Pinterest">
           </a>
         </li>
       </ul>
