--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="header content-section_theme">
       <nav class="header-menu">
         <ul class="header-menu-list">
           <li class="header-menu-list-item header-menu-list-item-no-bullit">
-            <a class="header-menu-link header-menu-link-active">главная</a>
+            <a class="header-menu-link header-menu-link-active" href="#">главная</a>
           </li>
           <li class="header-menu-list-item">
             <a class="header-menu-link" href="#">посмотреть лоты</a>
@@ -24,18 +24,19 @@
           </li>
         </ul>
       </nav>
-      <a class="header-logo">
+      <a class="header-logo" href="#">
         <img
           class="header-logo-image"
           src="images/logo-black.svg"
-          alt="Логотип Оно тебе надо">
+          alt="Логотип Оно тебе надо"
+        />
       </a>
       <address class="address header-address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
+        <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
-        наб. Принсенграхт 263-<br>265, Амстердам
+        <br />
+        наб. Принсенграхт 263-<br />265, Амстердам
       </address>
     </header>
     <main>
@@ -43,11 +44,17 @@
         <div class="overlay"></div>
         <h1 class="cover-title">
           <span class="accent-span">оно</span>
-          <span class="accent-span text-center">теб<span class="last-letter">е</span></span>
-          <span class="accent-span text-right">над<span class="last-letter">о</span></span>
+          <span class="accent-span text-center">
+            теб<span class="last-letter">е</span>
+          </span>
+          <span class="accent-span text-right">
+            над<span class="last-letter">о</span>
+          </span>
         </h1>
         <div class="cover-description">
-          <p class="cover-description-text common-space">Аукцион<span class="space-ninety"> </span>вещей, в<span class="space-onehundred-ten"> </span>которые никто<span class="space-ninety"> </span>не верил</p>
+          <p class="cover-description-text common-space">
+            Аукцион<span class="space-ninety"> </span>вещей, в<span class="space-ninety"> </span>которые никто<span class="space-ninety"> </span>не верил
+          </p>
           <button class="cover-description-button">Сделать ставку</button>
         </div>
       </section>
@@ -58,10 +65,13 @@
             <a class="card-link" href="#">
               <article class="card card-type-film">
                 <div class="overlay"></div>
-                <h3 class="card-title">Фильм режиссёра, который бросил киношколу</h3>
+                <h3 class="card-title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
                 <p class="card-text">
-                  Не просто бросил, а ушёл с первой лекции.
-                  Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
                 </p>
               </article>
             </a>
@@ -70,11 +80,16 @@
             <a class="card-link" href="#">
               <article class="card card-type-book">
                 <div class="overlay"></div>
-                <h3 class="card-title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <h3 class="card-title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
                 <p class="card-text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский.
-                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-                  И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
                 </p>
               </article>
             </a>
@@ -83,10 +98,13 @@
             <a class="card-link" href="#">
               <article class="card card-type-picture">
                 <div class="overlay"></div>
-                <h3 class="card-title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <h3 class="card-title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
                 <p class="card-text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-                  Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
               </article>
@@ -97,30 +115,36 @@
       </section>
       <section class="about content-section_theme">
         <div class="about-logo">
-          <img src="images/logo-white.svg" alt="Логотип Оно тебе надо">
+          <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" />
         </div>
         <div>
           <h2 class="about-header section-header">Об аукционе</h2>
-          <p class="about-text first-paragraph">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион.
-            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
-            Кому нужны все эти странные вещи, созданные любителями?</p>
-
-          <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
-            В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность,
-            сейчас без этих лотов невозможно представить современную культуру.
-            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          <p class="about-text first-paragraph">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about-text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
         </div>
       </section>
     </main>
     <footer class="footer content-section_theme">
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
+        <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
-        наб. Принсенграхт 263-265,<br> Амстердам
+        <br />
+        наб. Принсенграхт 263-265,<br />
+        Амстердам
       </address>
       <nav class="footer-menu">
         <ul class="footer-menu-list">
@@ -138,17 +162,29 @@
       <ul class="footer-social-list">
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/yt.svg" alt="Логотип YouTube">
+            <img
+              class="footer-social-icon"
+              src="images/yt.svg"
+              alt="Логотип YouTube"
+            />
           </a>
         </li>
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/vk.svg" alt="Логотип ВКонтакте">
+            <img
+              class="footer-social-icon"
+              src="images/vk.svg"
+              alt="Логотип ВКонтакте"
+            />
           </a>
         </li>
         <li class="footer-social-list-item">
           <a class="footer-social-link" href="#">
-            <img class="footer-social-icon" src="images/pinterest.svg" alt="Логотип Pinterest">
+            <img
+              class="footer-social-icon"
+              src="images/pinterest.svg"
+              alt="Логотип Pinterest"
+            />
           </a>
         </li>
       </ul>
