Исправлены ошибки после первого ревью

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div>
           <h2 class="about-header section-header">Об аукционе</h2>
-          <p class="about-text first-paragraph">
+          <p class="about-text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
